--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.9.3",
+    "@ant-design/icons": "5.0.1",
+    "@reduxjs/toolkit": "^1.9.3",
+    "antd": "5.3.2",
+    "axios": "1.3.4",
     "react": "18.2.0",
+    "react-countup": "6.4.2",
     "react-dom": "18.2.0",
-    "react-redux": "8.0.5"
+    "react-image-gallery": "1.2.11",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "6.9.0",
+    "react-spinners": "0.13.8",
+    "redux-persist": "6.0.0",
+    "uuid": "9.0.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
