--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "5.3.2",
     "async-mutex": "^0.5.0",
     "axios": "1.3.4",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-countup": "6.4.2",
@@ -25,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8",
+    "react-to-print": "^3.0.2",
     "redux-persist": "6.0.0",
     "sass": "^1.79.4",
     "uuid": "9.0.0",
